<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/banner">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/expensely_login_bg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_extrabold"
                android:text="Expensely."
                android:textSize="58sp"
                android:textColor="@android:color/black"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/signup_panel"
        android:layout_below="@id/banner">
        <RelativeLayout
            android:layout_height="350dp"
            android:layout_width="300dp"
            android:background="@drawable/rounded_layout"
            android:elevation="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/signup_tag"
                android:text="Sign Up"
                android:textSize="22sp"
                android:layout_marginTop="30dp"/>
            <EditText
                android:id="@+id/email_exitText"
                android:hint="@string/login_activity_email_address"
                android:inputType="textEmailAddress"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="20dp"
                android:layout_below="@+id/signup_tag"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/new_account_password_editText"
                android:hint="@string/login_activity_password"
                android:inputType="textPassword"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="20dp"
                android:layout_below="@+id/email_exitText"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/confirm_password_editText"
                android:hint="@string/create_new_account_confirm_password"
                android:inputType="textPassword"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="20dp"
                android:layout_below="@+id/new_account_password_editText"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/login_button_panel"
        android:layout_marginTop="-70dp"
        android:layout_below="@+id/signup_panel">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="12sp"
                android:id="@+id/create_new_account_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding"
                android:ems="7"
                android:text="CREATE"
                android:textColor="#FFFFFF"
                android:background="@drawable/rounded_textfield_green"
                android:elevation="4dp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
